# app_stock

./: .gitignore  README.md  app_container.py  audit.json  examples_new_architecture.py  inventory.json  main.py  performance_logger.py  requirements.txt  users.json
app_stock/: README.md  __init__.py  app_container.py  audit.json  inventory.json  main.py  performance_logger.py  pyproject.toml  requirements.txt  users.json
app_stock/app_stock/: examples_new_architecture.py  wsgi.py
app_stock/app_stock/repositories/: __init__.py  interfaces.py  inventory_repository.py  sales_repository.py
app_stock/app_stock/services/: __init__.py  audit_service.py  backup_service.py  inventory_service.py  payment_service.py  user_service.py
app_stock/app_stock/static/css/: styles.css
app_stock/app_stock/templates/: login.html
app_stock/app_stock/tests/: test_auth.py  test_backup.py
app_stock/docs/: MYSQL_MIGRATION.md
app_stock/models/: __init__.py  entities.py
app_stock/repositories/: __init__.py  audit_repository.py  inventory_repository.py  sales_repository.py  settings_repository.py  user_repository.py
app_stock/services/: __init__.py  audit_service.py  cart_service.py  inventory_service.py  payment_service.py  sales_service.py  user_service.py
app_stock/static/css/: styles.css
app_stock/templates/: audit.html  change_password.html  china_panel.html  dashboard.html  login.html  sales.html  sell.html  settings.html
app_stock/tests/: manual_payment_fullpay.py  manual_payment_test.py  test_financials.py  test_flask_login.py  test_sales.py  test_search_and_roles.py
(+46 files in other folders)
